perbaiki get all data
